some minor change

--- a/index.html
+++ b/index.html
@@ -58,11 +58,20 @@
 
   </section>
 
+
+
+
+
+
+
+
+
+
   <!-- this section is for coffee variants -->
 
   <section class="third-half">
 
-    <h1 class="section-2-header ver-2">Different Kind Of Coffee Drinks</h1>
+    <h1 class="section-2-header ver-2">Various Brewing styles</h1>
 
     <section class="variant-coffee-part1">
 
@@ -120,8 +129,152 @@
 
 
 
+  <!-- fourth section of this project -->
 
 
+
+
+
+
+
+
+  <section class="fourth-section">
+
+    <h1 class="section-2-header ver-2">
+      Different kind of coffees
+    </h1>
+
+
+
+
+    <section class="fourth-section-block">
+
+      <div class="fourths-section-div-1">
+        <h3>Espresso</h3>
+
+        <p>
+          The espresso, also known as a short black, is approximately 1 oz. of highly concentrated coffee. Although simple in appearance, it can be difficult to master.
+
+          <ul>
+            <li>Ratio: 1 shot of espressor</li>
+            <li>Cup: 2-4 oz. Espresso Cup</li>
+          </ul>
+        </p>
+
+      </div>
+
+      <!-- <div>
+
+        <img src="" alt="">
+
+      </div> -->
+
+    </section>
+
+
+    <section class="fourth-section-block">
+
+      <div class="fourths-section-div-2">
+        <h3>Double Espresso</h3>
+
+        <p>
+          A double espresso may also be listed as doppio, which is the Italian word for double. This drink is highly concentrated and strong.
+
+          <ul>
+            <li>Ratio: 2 shots of espresso</li>
+            <li>Cup: 2-4 oz. 3-4 oz. Demitasse Cup</li>
+          </ul>
+        </p>
+
+      </div>
+<!-- 
+      <div>
+
+        <img src="" alt="">
+
+      </div> -->
+
+    </section>
+
+
+    <section class="fourth-section-block">
+
+      <div class="fourths-section-div-3">
+        <h3>Red Eye</h3>
+
+        <p>
+          The red eye's purpose is to add a boost of caffeine to your standard cup of coffee.
+
+          <ul>
+            <li>1 shot of espresso + 6 oz. of drip-brewed coffee</li>
+            <li>Cup: 8 oz. Coffee Mug</li>
+          </ul>
+        </p>
+
+      </div>
+
+      <!-- <div>
+
+        <img src="" alt="">
+
+      </div> -->
+
+    </section>
+
+
+
+    <section class="fourth-section-block">
+
+      <div class="fourths-section-div-4">
+        <h3>Black Eye</h3>
+
+        <p>
+          The black eye is just the doubled version of the red eye and is very high in caffeine.
+
+          <ul>
+            <li>Ratio: 2 shots of espresso + 6 oz. of drip-brewed coffee</li>
+            <li>Cup: 8-10 oz. Coffee Mug</li>
+          </ul>
+        </p>
+
+      </div>
+
+      <!-- <div>
+
+        <img src="./images/black_eye.png" alt="">
+
+      </div> -->
+
+    </section>
+
+
+
+
+    <section class="fourth-section-block">
+
+      <div class="fourths-section-div-5">
+        
+        <h3>Americano</h3>
+
+        <p>
+          Americanos are popular breakfast drinks and thought to have originated during World War II. Soldiers would add water to their coffee to extend their rations farther. The water dilutes the espresso while still maintaining a high level of caffeine.
+        </p>
+          <ul>
+            <li>Ratio: 1 shot of espresso + 3 oz. of hot waterr</li>
+            <li>Cup: 5-6 oz. Glass Coffee Mug</li>
+          </ul>
+
+      </div>
+
+      <!-- <div>
+
+        <img src="./images/americano.png" alt="">
+
+      </div> -->
+
+    </section>
+
+  </section>
 
 
 
